[gd_scene load_steps=2 format=3 uid="uid://kmxupqwa3cfw"]

[ext_resource type="Script" uid="uid://ce67w64dpi3rt" path="res://boss_puzzle_typing.gd" id="1_25qrf"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_25qrf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7058824)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 400)
layout_mode = 0
offset_right = 600.0
offset_bottom = 400.0
theme_override_constants/separation = 20

[node name="QuestionLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
text = "Question will apear here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AnswerLineEdit" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
text = "Type your answer here"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SubmitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Submit
"

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
autowrap_mode = 2
